--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ async function startPushes() {
   setTimeout(() => {
     amounts.forEach((amount, index) => {
       setTimeout(() => {
-        reg.showNotification("PayPal", {
+        reg.showNotification("Playful Rewards", {
           body: `You received a new payment ${amount} from Playful Rewards`,
           icon: "icon.png"
         });
